@@ -11,10 +11,10 @@ The Waf binary is a python script which does not require any installation whatso
 
 [source,shishell]
 ---------------
-$ wget http://waf.googlecode.com/files/waf-1.7.9
-$ mv waf-1.7.9 waf
+$ wget http://waf.googlecode.com/files/waf-1.7.10
+$ mv waf-1.7.10 waf
 $ python waf --version
-waf 1.7.9 (54dc13ba5f51bfe2ae277451ec5ac1d0a91c7aaf)
+waf 1.7.10 (54dc13ba5f51bfe2ae277451ec5ac1d0a91c7aaf)
 ---------------
 
 The +waf+ file has its own library compressed in a binary stream in the same file. Upon execution, the library is uncompressed in a hidden folder in the current directory. The folder will be re-created if removed. This scheme enables different Waf versions to be executed from the same folders:
@@ -22,7 +22,7 @@ The +waf+ file has its own library compressed in a binary stream in the same fil
 [source,shishell]
 ---------------
 $ ls -ld .waf*
-.waf-1.7.9-2c924e3f453eb715218b9cc852291170
+.waf-1.7.10-2c924e3f453eb715218b9cc852291170
 ---------------
 
 NOTE: The binary file requires http://docs.python.org/library/bz2.html[bzip2] compression support, which may be unavailable in some self-compiled cPython installations.
@@ -33,18 +33,18 @@ Building Waf requires a Python interpreter having a version number in the range 
 
 [source,shishell]
 ---------------
-$ wget http://waf.googlecode.com/files/waf-1.7.9.tar.bz2
-$ tar xjvf waf-1.7.9.tar.bz2
-$ cd waf-1.7.9
+$ wget http://waf.googlecode.com/files/waf-1.7.10.tar.bz2
+$ tar xjvf waf-1.7.10.tar.bz2
+$ cd waf-1.7.10
 $ python waf-light
 Configuring the project
 'build' finished successfully (0.001s)
 Checking for program python              : /usr/bin/python
 Checking for python version              : (2, 6, 5, 'final', 0)
 'configure' finished successfully (0.176s)
-Waf: Entering directory `/waf-1.7.9/build'
+Waf: Entering directory `/waf-1.7.10/build'
 [1/1] create_waf:  -> waf
-Waf: Leaving directory `/waf-1.7.9/build'
+Waf: Leaving directory `/waf-1.7.10/build'
 'build' finished successfully (2.050s)
 ---------------
 
@@ -86,7 +86,7 @@ The following will create a custom waf file which will import and execute 'foo' 
 $ python waf-light --make-waf --tools=compat15,$PWD/aba.py
    --prelude=$'\tfrom waflib.extras import aba\n\taba.foo()'
 $ ./waf --help
-This is Waf 1.7.9
+This is Waf 1.7.10
 [...]
 ---------------
 
@@ -112,7 +112,7 @@ On unix-like systems, it is usually much more convenient to set the executable p
 ---------------
 $ chmod 755 waf
 $ ./waf --version
-waf 1.7.9 (54dc13ba5f51bfe2ae277451ec5ac1d0a91c7aaf)
+waf 1.7.10 (54dc13ba5f51bfe2ae277451ec5ac1d0a91c7aaf)
 ---------------
 
 If the command-line interpreter supports aliases, it is recommended to set the alias once:
@@ -121,7 +121,7 @@ If the command-line interpreter supports aliases, it is recommended to set the a
 ---------------
 $ alias waf=$PWD/waf
 $ waf --version
-waf 1.7.9 (54dc13ba5f51bfe2ae277451ec5ac1d0a91c7aaf)
+waf 1.7.10 (54dc13ba5f51bfe2ae277451ec5ac1d0a91c7aaf)
 ---------------
 
 Or, the execution path may be modified to point at the location of the waf binary:
@@ -130,7 +130,7 @@ Or, the execution path may be modified to point at the location of the waf binar
 ---------------
 $ export PATH=$PWD:$PATH
 $ waf --version
-waf 1.7.9 (54dc13ba5f51bfe2ae277451ec5ac1d0a91c7aaf)
+waf 1.7.10 (54dc13ba5f51bfe2ae277451ec5ac1d0a91c7aaf)
 ---------------
 
 In the next sections of the book, we assume that either an alias or the execution path have been set in a way that +waf+ may be called directly.
